grammar.js
        source_file: ($) => repeat($._definition),

        mathematical_operators: ($) =>
            choice("+", "-", "*", "/", $.mathematical_operators_mod_keyword),
        operators_used_in_statements: ($) =>
            choice($.mathematical_operators, $.bit_operators),
        comment: ($) =>
            token(
                choice(
                    seq("//", /.*/),
                    seq("!", /.*/),
                    token(seq(/(\/\*[^\*])/, /[^*]*\*+([^\/*][^*]*\*+)*/, "/")), // this is janky as HELL
                    "/**/", // this is even more janky
                ),
            ),

        _definition: ($) =>
            choice(
                $.a_function,
                $.xml_non_function_docstring,
                $.variable_declaration,
                $.array_declaration, // cannot be inside of function body - at least, i dont think a module declaration inside of a function would work? idk, should test it sometime
            ),

        function_end: ($) => token("END"),

        a_function: ($) =>
            seq(
                optional($.xml_function_docstring),
                $.function_definition,
                optional(repeat($.variable_declaration)),
                optional(repeat($.statement)),
                optional($.return_statment),
                $.function_end,
            ),
        _int_keyword: (_) => token("INT"),
        _string_keyword: (_) => token("STRING"),
        _real_keyword: (_) => token("REAL"),
        _quality_keyword: (_) => token("QUALITY"),
        _timestamp_keyword: (_) => token("TIMESTAMP"),
        _bool_keyword: (_) => token("BOOL"),
        _object_keyword: (_) => token("OBJECT"),
        _long_keyword: (_) => token("LONG"),
        _void_keyword: (_) => token("VOID"),

        type: ($) =>
            choice(
                $._int_keyword,
                $._string_keyword,
                $._real_keyword,
                $._quality_keyword,
                $._timestamp_keyword,
                $._bool_keyword,
                $._object_keyword,
                $._long_keyword, // IDK, their docs dont mention it iirc, but their examples do
                $._void_keyword, // Only valid for functions, but eh
            ),

        number: ($) => prec(2, /(\d+(?:\.\d+)?)/),

        string_contents: ($) => repeat1(choice(/[^\^"]/, /\^./)),

        punctuation_quotation_mark: ($) => token('"'),
        punctuation_semicolon: ($) => token(";"), // somehow having the optional whitespace speeds up the parser?
        punctuation_comma: ($) => token(","),
        punctuation_bracket_open: ($) => token("("),
        punctuation_bracket_close: ($) => token(")"),
        punctuation_square_bracket_open: ($) => token("["),
        punctuation_square_bracket_close: ($) => token("]"),

        punctuation_equals_sign: ($) => token(seq("=", optional(""))),
        string: ($) =>
            seq(
                $.punctuation_quotation_mark,
                optional($.string_contents),
                $.punctuation_quotation_mark,
            ),

        assign_to_value: ($) =>
            seq(
                field("assign_to_value_equals_sign", $.punctuation_equals_sign),
                $.expression_,
                optional($.format_specifier),
            ),

        function_parameter: ($) =>
            seq(
                field("parameter_type", $.type),
                field(
                    "parameter_name",
                    choice(
                        $.identifier,
                        $.format_specifier_variable,
                        $.array_variable,
                    ),
                ) /*
          I don’t think cicode has any rules about what a variable name can be, except for, and I quote:
          "The first 32 characters of a variable name needs to be unique." - https://docs.aveva.com/bundle/plant-scada/page/1130531.html
          That is not going to be implemented here.
        */,
                optional(field("defaultval", $.default_value)),
            ),
        // Note that you cannot use default values infront of normal values, at some point I should fix that but eh

        function_parameters: ($) =>
            seq(
                $.function_parameter,
                optional(
                    repeat(seq($.punctuation_comma, $.function_parameter)),
                ),
            ),

        identifier: ($) => /[0-9A-Za-z_]+/,
        function_keyword: ($) => token("FUNCTION"),
        function_definition: ($) =>
            seq(
                field("scope", optional($.function_scope)),
                field("return_type", optional($.type)),
                $.function_keyword,
                field("function_name", $.identifier),
                field(
                    "function_definition_bracket_open",
                    $.punctuation_bracket_open,
                ),
                field("parameters", optional($.function_parameters)),
                field(
                    "function_definition_bracket_close",
                    $.punctuation_bracket_close,
                ),
                "\n",
            ),
        global_variable_scope: ($) => token("GLOBAL"),
        array_variable: ($) =>
            seq(field("variable", $.identifier), $.array_brackets_index),

        array_initial_values: ($) =>
            seq(
                field(
                    "array_initial_values_equals_sign",
                    $.punctuation_equals_sign,
                ),
                $.expression_,
                optional($.format_specifier),
                repeat(
                    seq(
                        $.punctuation_comma,
                        $.expression_,
                        optional($.format_specifier),
                    ),
                ),
            ),
        array_brackets_index: ($) =>
            repeat1(
                seq(
                    $.punctuation_square_bracket_open,
                    field("array_dimension_size", $.expression_atom),
                    $.punctuation_square_bracket_close,
                ),
            ),

        array_declaration: ($) =>
            seq(
                optional(field("array_scope", $.array_scope)),
                field("array_type", $.type),
                field("array", $.identifier),
                field("array_dimensions", $.array_brackets_index),
                optional(field("array_initial_values", $.array_initial_values)),
                field("closing_semicolon", $.punctuation_semicolon),
            ),

        expression_in_brackets: ($) =>
            seq(
                field("expression_open_brackets", $.punctuation_bracket_open),
                $.expression_,
                field("expression_close_brackets", $.punctuation_bracket_close),
            ),
        unary_minus_negation_symbol: ($) => "-",
        unary_minus_expression_atom: ($) =>
            prec.right(
                2,
                seq($.unary_minus_negation_symbol, $.expression_atom),
            ), // unary minus

        expression_atom: ($) =>
            choice(
                field("variable", $.identifier),
                $.string,
                $.number,
                $.format_specifier_variable,
                $.array_variable,
                $.expression_in_brackets,
                $.unary_minus_expression_atom,
                $.function_call,
            ),

        expression: ($) =>
            prec.left(
                2,
                seq(
                    $.expression_,
                    $.operators_used_in_statements,
                    $.expression_,
                ),
            ),

        expression_: ($) =>
            prec.left(2, choice($.expression_atom, $.expression)),

        statement: ($) =>
            choice(
                $.for_loop,
                $.while_loop,

                field("if_statement", $.if_statement),
                field("select_case", $.select_case_statement),
                $.variable_declaration, // remove this from here if variable declerations must happen before statements
                $.variable_assignment,
                $.statement_function_call,
            ),

        variable_assignment: ($) =>
            seq(
                field("variable", $.identifier),
                optional(field("array_dimensions", $.array_brackets_index)),
                $.assign_to_value,
                field("closing_semicolon", $.punctuation_semicolon),
            ),

        conditional_atom: ($) =>
            choice(
                $.expression_atom,
                $.expression,
                // $.identifier,
                //     $.number,
                //     $.negative_number,
                //     $.string,
                //     $.array_variable,
                $.conditional_expression_in_brackets,
                $.unary_not_conditional_atom,
                // $.function_call,
            ),

        conditional_expression: ($) =>
            choice(
                $.conditional_atom,
                prec.left(
                    1,
                    seq(
                        $.conditional_expression,
                        $.operators_used_in_conditionals,
                        $.conditional_expression,
                    ),
                ),
            ),
        to_statement_to_keyword: ($) => token("TO"),
        case_expression: ($) =>
            choice(
                $.expression_atom,
                $.to_statement,
                $.select_case_conditional_expression,
            ),

        select_case_select_case_keyword: ($) => token("SELECT CASE"),
        select_case_end_select_keyword: ($) => token("END SELECT"),
        select_case_statement: ($) =>
            seq(
                $.select_case_select_case_keyword,
                $.conditional_expression,
                repeat(seq(field("case", $.case_statement))),
                optional(field("case_else", $.case_else_statement)),
                $.select_case_end_select_keyword,
            ),

        return_keyword: ($) => token("RETURN"),
        return_statment: ($) =>
            seq(
                $.return_keyword,
                optional($.expression_),
                field("closing_semicolon", $.punctuation_semicolon),
            ),
        case_statement_case_keyword: ($) => token("CASE"),
        case_statement: ($) =>
            seq(
                $.case_statement_case_keyword,
                seq(
                    $.case_expression,
                    repeat(seq($.punctuation_comma, $.case_expression)),
                ),
                seq(repeat($.statement), optional($.return_statment)),
            ),
        case_statement_case_else_keyword: ($) => token("CASE ELSE"),
        case_else_statement: ($) =>
            seq(
                $.case_statement_case_else_keyword,
                optional($.statement),
                optional($.return_statment),
            ),
        /****************************************
         *              Loops                   *
         *                                      *
         ***************************************/
        for_loop_for_keyword: ($) => token("FOR"),
        for_loop_do_keyword: ($) => token("DO"),
        for_loop_end_keyword: ($) => token("END"),

        for_loop_iterable: ($) =>
            seq(
                field("for_loop_variable", $.identifier),
                $.assign_to_value,
                $.to_statement_to_keyword,
                $.expression_,
            ),

        for_loop: ($) =>
            seq(
                $.for_loop_for_keyword,
                $.for_loop_iterable,
                $.for_loop_do_keyword,
                repeat1($.statement),
                $.for_loop_end_keyword,
            ),

        delimited_comment_doxygen_xml_opening: ($) => "/**",

        delimited_comment_doxygen_xml_closing: ($) => "**/",

        _star_in_xml_comment: ($) => token(seq("*")),

        xml_docstring_contents: ($) =>
            repeat1(
                choice(
                    $._star_in_xml_comment,
                    $.doxygen_summary_xml_tag,
                    $.doxygen_param_xml_tag,
                    field("returns_contents", $.doxygen_returns_xml_tag),
                ),
            ),

        xml_non_function_docstring: ($) =>
            seq(
                $.delimited_comment_doxygen_xml_opening,
                seq(
                    optional($.xml_docstring_contents),
                    $.delimited_comment_doxygen_xml_closing,
                ),
            ),

        xml_function_docstring: ($) =>
            seq(
                $.delimited_comment_doxygen_xml_opening,
                seq(
                    optional($.xml_docstring_contents),
                    $.delimited_comment_doxygen_xml_closing,
                ),
            ),

        doxygen_xml_name_attribute_name_keyword: ($) => "name",

        doxygen_xml_name_attribute: ($) =>
            seq(
                $.doxygen_xml_name_attribute_name_keyword,
                $.punctuation_equals_sign,
                $.punctuation_quotation_mark,
                field("parameter_name", $.identifier),
                $.punctuation_quotation_mark,
            ),
        /******************************************************
         *               Doxygen XML Commands                 *
         ******************************************************/

        // <summary>
        doxygen_summary_xml_tag: ($) =>
            seq(
                $.doxygen_summary_xml_open_tag,
                field("summary_contents", $.doxygen_summary_content),
                $.doxygen_summary_xml_close_tag,
            ),
        doxygen_summary_xml_open_tag: ($) => token("<summary>"),
        doxygen_summary_xml_close_tag: ($) => token("</summary>"),

        // <param name="paramName">
        doxygen_param_xml_tag: ($) =>
            seq(
                $.doxygen_param_xml_open_tag,
                optional($.doxygen_xml_name_attribute),
                $.doxygen_param_xml_close_opening_tag,
                field("param_contents", $.doxygen_param_content),
                $.doxygen_param_xml_close_tag,
            ),
        doxygen_param_xml_open_tag: ($) => token("<param"),
        doxygen_param_xml_close_tag: ($) => token("</param>"),
        doxygen_param_xml_close_opening_tag: ($) => token(">"),

        // <returns>
