test/corpus/arrays.txt
===================
Array And Select Case
===================
INT Values[3];

FUNCTION ArraySelect(INT X)
    SELECT CASE X
        CASE 0
            RETURN Values[0];
        CASE ELSE
            RETURN -1;
    END SELECT
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (function_parameters
        (function_parameter
          (type)
          (identifier)))
      (punctuation_bracket_close))
    (statement
      (select_case_statement
        (select_case_select_case_keyword)
        (conditional_expression
          (conditional_atom
            (expression_atom
              (identifier))))
        (case_statement
          (case_statement_case_keyword)
          (case_expression
            (expression_atom
              (number)))
          (return_statment
            (return_keyword)
            (expression_
              (expression_atom
                (array_variable
                  (identifier)
                  (array_brackets_index
                    (punctuation_square_bracket_open)
                    (expression_atom
                      (number))
                    (punctuation_square_bracket_close)))))
            (punctuation_semicolon)))
        (case_else_statement
          (case_statement_case_else_keyword)
          (return_statment
            (return_keyword)
            (expression_
              (expression_atom
                (unary_minus_expression_atom
                  (unary_minus_negation_symbol)
                  (expression_atom
                    (number)))))
            (punctuation_semicolon)))
        (select_case_end_select_keyword)))
    (function_end)))

===================
Global Array Used In Function
===================
GLOBAL INT GlobalValues[10];

FUNCTION ReadGlobalArray()
    RETURN GlobalValues[1];
END

---

(source_file
  (array_declaration
    (array_scope
      (global_variable_scope))
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (return_statment
      (return_keyword)
      (expression_
        (expression_atom
          (array_variable
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (number))
              (punctuation_square_bracket_close)))))
      (punctuation_semicolon))
    (function_end)))

===================
Module Array Used In Function
===================
INT Values[5];

FUNCTION ReadModuleArray()
    RETURN Values[0];
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (return_statment
      (return_keyword)
      (expression_
        (expression_atom
          (array_variable
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (number))
              (punctuation_square_bracket_close)))))
      (punctuation_semicolon))
    (function_end)))

===================
Array With Parenthesised Index
===================
INT Values[10];

FUNCTION ArrayParenIndex()
    Values[(1 + 2)] = 5;
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_assignment
        (identifier)
        (array_brackets_index
          (punctuation_square_bracket_open)
          (expression_atom
            (expression_in_brackets
              (punctuation_bracket_open)
              (expression_
                (expression
                  (expression_
                    (expression_atom
                      (number)))
                  (operators_used_in_statements
                    (mathematical_operators))
                  (expression_
                    (expression_atom
                      (number)))))
              (punctuation_bracket_close)))
          (punctuation_square_bracket_close))
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (number))))
        (punctuation_semicolon)))
    (function_end)))

===================
Array Returned Element
===================
INT Values[3];

FUNCTION ReturnArrayValue()
    RETURN Values[2];
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (return_statment
      (return_keyword)
      (expression_
        (expression_atom
          (array_variable
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (number))
              (punctuation_square_bracket_close)))))
      (punctuation_semicolon))
    (function_end)))

===================
Array Passed To Function
===================

FUNCTION TakeArray(INT Arr[5])
    RETURN Arr[0];
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (function_parameters
        (function_parameter
          (type)
          (array_variable
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (number))
              (punctuation_square_bracket_close)))))
      (punctuation_bracket_close))
    (return_statment
      (return_keyword)
      (expression_
        (expression_atom
          (array_variable
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (number))
              (punctuation_square_bracket_close)))))
      (punctuation_semicolon))
    (function_end)))

===================
Array Used In Expression
===================

INT Values[5];

FUNCTION ArrayExpr()
    INT x;
    x = Values[1] + Values[2];
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (array_variable
                    (identifier)
                    (array_brackets_index
                      (punctuation_square_bracket_open)
                      (expression_atom
                        (number))
                      (punctuation_square_bracket_close)))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (array_variable
                    (identifier)
                    (array_brackets_index
                      (punctuation_square_bracket_open)
                      (expression_atom
                        (number))
                      (punctuation_square_bracket_close))))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Array Default Assignment
===================
STRING ArrayA[5]="This","is","a","String","Array";

FUNCTION ArrayAssign()
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (array_initial_values
      (punctuation_equals_sign)
      (expression_
        (expression_atom
          (string
            (punctuation_quotation_mark)
            (string_contents)
            (punctuation_quotation_mark))))
      (punctuation_comma)
      (expression_
        (expression_atom
          (string
            (punctuation_quotation_mark)
            (string_contents)
            (punctuation_quotation_mark))))
      (punctuation_comma)
      (expression_
        (expression_atom
          (string
            (punctuation_quotation_mark)
            (string_contents)
            (punctuation_quotation_mark))))
      (punctuation_comma)
      (expression_
        (expression_atom
          (string
            (punctuation_quotation_mark)
            (string_contents)
            (punctuation_quotation_mark))))
      (punctuation_comma)
      (expression_
        (expression_atom
          (string
            (punctuation_quotation_mark)
            (string_contents)
            (punctuation_quotation_mark)))))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (function_end)))

===================
Array Loop
===================
REAL Array[10];

FUNCTION TestArrayLoop()
    INT Counter;
    FOR Counter = 0 TO 9 DO
        Array[Counter] = 0;
    END
    RETURN Total;
END

---

(source_file
  (array_declaration
    (type)
    (identifier)
    (array_brackets_index
      (punctuation_square_bracket_open)
      (expression_atom
        (number))
      (punctuation_square_bracket_close))
    (punctuation_semicolon))
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (for_loop
        (for_loop_for_keyword)
        (for_loop_iterable
          (identifier)
          (assign_to_value
            (punctuation_equals_sign)
            (expression_
              (expression_atom
                (number))))
          (to_statement_to_keyword)
          (expression_
            (expression_atom
              (number))))
        (for_loop_do_keyword)
        (statement
          (variable_assignment
            (identifier)
            (array_brackets_index
              (punctuation_square_bracket_open)
              (expression_atom
                (identifier))
              (punctuation_square_bracket_close))
            (assign_to_value
              (punctuation_equals_sign)
              (expression_
                (expression_atom
                  (number))))
            (punctuation_semicolon)))
        (for_loop_end_keyword)))
    (return_statment
      (return_keyword)
      (expression_
        (expression_atom
          (identifier)))
      (punctuation_semicolon))
    (function_end)))
