test/corpus/assignments.txt
===================
Assign Literal
===================
FUNCTION AssignLiteral()
    INT x;
    x = 1;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (number))))
        (punctuation_semicolon)))
    (function_end)))

===================
Assign Negative Literal
===================
FUNCTION AssignNegative()
    INT x;
    x = -1;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (unary_minus_expression_atom
                (unary_minus_negation_symbol)
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Assign Expression
===================
FUNCTION AssignExpression()
    INT x;
    x = 1 + 2 * 3;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression
                  (expression_
                    (expression_atom
                      (number)))
                  (operators_used_in_statements
                    (mathematical_operators))
                  (expression_
                    (expression_atom
                      (number)))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Assign Parenthesised Expression
===================
FUNCTION AssignParens()
    INT x;
    x = (1 + 2) * 3;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (expression_in_brackets
                    (punctuation_bracket_open)
                    (expression_
                      (expression
                        (expression_
                          (expression_atom
                            (number)))
                        (operators_used_in_statements
                          (mathematical_operators))
                        (expression_
                          (expression_atom
                            (number)))))
                    (punctuation_bracket_close))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))

===================
Assign Value to Negative One
===================
FUNCTION UnaryAssign()
    INT Value1;
    INT Value2 = -1;
    Value1 = -1;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (unary_minus_expression_atom
                (unary_minus_negation_symbol)
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (unary_minus_expression_atom
                (unary_minus_negation_symbol)
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (function_end)))
