test/corpus/comments.txt
===================
Slash Line Comment
===================
FUNCTION LineComment()
    INT x; // comment
    x = 1;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (comment)
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (number))))
        (punctuation_semicolon)))
    (function_end)))

===================
Exclamation Line Comment
===================
FUNCTION LineComment()
    INT x; ! comment
    x = 1;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (comment)
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (number))))
        (punctuation_semicolon)))
    (function_end)))

===================
Block Comment
===================
FUNCTION BlockComment()
    /*
        multi-line
        comment
    */
    INT x;
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (comment)
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (function_end)))
